--- a/app/assets/stylesheets/pages/_downtime_actions.scss
+++ b/app/assets/stylesheets/pages/_downtime_actions.scss
@@ -9,9 +9,13 @@
       margin-bottom: 0;
       padding-bottom: 0;
     }
-    
+
     .button-row {
       margin-top: 0;
+    }
+
+    .action-response {
+      margin-bottom: 10px;
     }
   }
 }
