--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -178,7 +178,7 @@
 
   .button-row
     = f.submit "Save"
-    - if @character.status == 0 and (current_user == @character.user or @character.user.nil?) and !current_user.is_storyteller
+    - if @character.status == 0 and (current_user == @character.user or @character.user.nil?) and !current_user.is_storyteller and ((Setting.qualitative_open and @character.use_extended) or (Setting.quantitative_open and !@character.use_extended))
       = f.hidden_field :status
       = f.submit "Save and Submit", id: 'save-submit'
 
