--- a/app/views/characters/wizard_questionnaire.slim
+++ b/app/views/characters/wizard_questionnaire.slim
@@ -58,7 +58,8 @@
         = f.submit "Save and Next Page", id: 'save-continue'
         = f.submit "Save & Skip to Full Sheet", id: 'save-skip'
       - else
-        = f.submit "Save and Submit", id: 'save-submit'
+        - if @character.status == 0 and Setting.qualitative_open
+          = f.submit "Save and Submit", id: 'save-submit'
 
   = javascript_include_tag 'wizard'
   = javascript_include_tag 'characters'
