Add some styling for mechanics packets

--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -25,4 +25,12 @@ h2 {
   .qualitative {
     page-break-before: always;
   }
+
+  .column-content {
+    columns: 2;
+
+    .column-item {
+      break-inside: avoid;
+    }
+  }
 }
