--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -25,4 +25,14 @@ h2 {
   .qualitative {
     page-break-before: always;
   }
+
+  .boxes {
+    display: flex;
+
+    .mod {
+      font-size: 14px;
+      display: block;
+      text-align: center;
+    }
+  }
 }
