--- a/app/views/characters/print.slim
+++ b/app/views/characters/print.slim
@@ -24,13 +24,21 @@
         .row
           strong Willpower
           .boxes
-            - @character.willpower.times do
-              i.fa.fa-square-o
+            - @character.willpower.times do |i|
+              .box
+                i.fa.fa-square-o
+                - if @character.willpower - i < 4
+                  span.mod
+                    = "-#{4 - (@character.willpower-i)}"
         .row
           strong Health
           .boxes
-            - @character.health.times do
-              i.fa.fa-square-o
+            - @character.health.times do |i|
+              .box
+                i.fa.fa-square-o
+                - if @character.health - i < 4
+                  span.mod
+                    = "-#{4 - (@character.willpower-i)}"
         .row
           strong Initiative
           = @character.initiative
