--- a/app/views/characters/show.slim
+++ b/app/views/characters/show.slim
@@ -1,135 +1,7 @@
 .character
-  h2
-    = "Character: #{@character.name}"
-
-  .form-row.basic-stats
-    .stat
-      strong Name:
-      = @character.name
-    .stat
-      strong Status:
-      = @character.get_status
-    .stat
-      strong Character Pronouns:
-      = @character.pronouns
-    .stat
-      strong Player:
-      = @character.user.name
-    .stat
-      strong True Self:
-      - if @character.true_self
-        = @character.true_self.name
-
-  h3.section Attributes
-
-  .flex-container.attributes
-    - @attributes.each do |cat, vals|
-      .column
-        strong
-          = cat
-        - vals.each do |val|
-          .row
-            span.label
-              = val
-            .dots
-              - eval("@character.#{val.parameterize("_")}").times do
-                = icon 'circle'
-
-              - (5-eval("@character.#{val.parameterize("_")}")).times do
-                = icon 'circle-o'
-
-  h3.section Skills and Special Training
-
-  .flex-container.skills-training
-    - @skills_training.each do |cat, vals|
-      .column
-        strong
-          = cat
-        - vals.each do |val|
-          .row
-            span.label
-              = val
-            .dots
-              - eval("@character.#{val.parameterize("_")}").times do
-                = icon 'circle'
-
-              - (5-eval("@character.#{val.parameterize("_")}")).times do
-                = icon 'circle-o'
-
-  h3.section Advantages
-
-  ul#advantages
-    - @character.character_has_advantages.group_by{|adv| adv.advantage_id}.each do |k, group|
-      - group.each_with_index do |cha, i|
-        li
-          p.name
-            = cha.advantage.name
-            - if cha.advantage.requires_specification?
-              = " (#{cha.specification})"
-            - if cha.advantage.allowed_ratings.length > 1
-              = " #{cha.rating}"
-          - if i == group.length-1
-            p.desc
-              = raw @markdown.render(cha.advantage.description)
-
-  h3.section Challenges
-
-  ul#challenges
-    - @character.character_has_challenges.each do |chc|
-      li
-        p.name
-          - if chc.challenge.is_custom and chc.custom_name.present?
-            = chc.custom_name
-          - else
-            = chc.challenge.name
-        p.desc
-          - if chc.challenge.is_custom and chc.custom_description.present?
-            = raw @markdown.render(chc.custom_description)
-          - else
-            = raw @markdown.render(chc.challenge.description)
-
-  h3.section Derived Stats
-  .derived-stats
-    .stat.willpower
-      strong Willpower:
-      = @character.willpower
-
-    .stat.health
-      strong Health:
-      = @character.health
-
-    .stat.initiative
-      strong Initiative:
-      = @character.initiative
-
-    .stat.defense
-      strong Defense:
-      = @character.defense
-
-    .stat.speed
-      strong Speed:
-      = @character.speed
-
-
-  h3.section Public Blurb
-
-  .public-blurb
-    - if @character.public_blurb.present?
-      = @character.public_blurb
-
-  h3.section Questionnaire
-
-  .questionnaire.accordion
-    - @questionnaire_sections.each do |qs|
-      .questionnaire-section
-        h4 #{qs.title}
-        .section-content
-          - qs.questionnaire_items.each do |qi|
-            .question
-              .question-text
-                = qi.question
-              .question-answer
-                - if @character.questionnaire_answers.where(questionnaire_item_id: qi.id).present?
-                  = raw @markdown.render(@character.questionnaire_answers.where(questionnaire_item_id: qi.id).first.answer)
+  - if @character.is_npc
+    = render partial: 'npc_sheet', locals: {character: @character, attributes: @attributes, skills_training: @skills_training, markdown: @markdown}
+  - else
+    = render partial: 'sheet', locals: {character: @character, attributes: @attributes, skills_training: @skills_training, markdown: @markdown, questionnaire_sections: @questionnaire_sections, questionnaire: @questionnaire}
 
   = javascript_include_tag 'characters', 'data-turbolinks-track' => true
