fill out index view, add destroy routes

--- a/app/views/storytellers/dashboard/index.slim
+++ b/app/views/storytellers/dashboard/index.slim
@@ -4,6 +4,8 @@ ul
   li
     = link_to "Print Character Sheets", characters_print_path, target: '_blank'
   li
+    = link_to "Experience", storytellers_experience_path
+  li
     = link_to "Advantages", storytellers_advantages_path
   li
     = link_to "Challenges", storytellers_challenges_path
