--- a/app/views/storytellers/experience/index.slim
+++ b/app/views/storytellers/experience/index.slim
@@ -23,7 +23,7 @@ table.table
           td
             = link_to "View", storytellers_show_experience_expenditure_path(expenditure)
           td
-            = form_tag(storytellers_delete_xp_expenditure_path(xprecord), method: 'DELETE') do
+            = form_tag(storytellers_delete_xp_expenditure_record_path(expenditure), method: 'DELETE') do
               = button_tag "Delete", type: 'submit', onClick: 'return confirm("Are you sure you want to delete this experience expenditure?");', class: 'button-text'
 
 
@@ -43,12 +43,12 @@ table.table
       th
   tbody
     - if @records.present?
-      - @records.each do |xprecord|
+      - @records.each do |record|
         tr
-          td #{xprecord.character.name}
-          td #{xprecord.amount}
-          td #{xprecord.description}
-          td #{xprecord.created_at}
+          td #{record.character.name}
+          td #{record.amount}
+          td #{record.description}
+          td #{record.created_at}
           td
-            = form_tag(storytellers_delete_xp_record_path(xprecord), method: 'DELETE') do
+            = form_tag(storytellers_delete_xp_record_path(record), method: 'DELETE') do
               = button_tag "Delete", type: 'submit', onClick: 'return confirm("Are you sure you want to delete this experience record?");', class: 'button-text'
