add additional information box to character sheet for NPCs (maybe want to add it to PCs later?)

--- a/app/views/characters/_npc_form.slim
+++ b/app/views/characters/_npc_form.slim
@@ -138,6 +138,10 @@
       = f.label :initiative
       = f.number_field :initiative
 
+  h3.section Additional Information
+
+  = f.text_area :additional_info
+
   .button-row
     = f.submit "Save"
 
