fix error in migrations order; fix setting character type to NPC

--- a/app/views/characters/_npc_sheet.slim
+++ b/app/views/characters/_npc_sheet.slim
@@ -98,4 +98,9 @@
       strong Speed:
       = character.speed
 
+  h3.section Additional Information
+
+  .additional-info
+    = raw @markdown.render(character.additional_info)
+
   = javascript_include_tag 'characters', 'data-turbolinks-track' => true
