does heroku just hate @types

--- a/app/views/downtime_actions/_form.slim
+++ b/app/views/downtime_actions/_form.slim
@@ -5,7 +5,7 @@
 
   .form-row
     = f.label :action_type
-    = f.select :action_type, options_for_select(@types)
+    = f.select :action_type, options_for_select(@action_types)
 
   .form-row
     = f.label :assets
