--- a/app/views/downtime_actions/index.slim
+++ b/app/views/downtime_actions/index.slim
@@ -21,7 +21,7 @@ h2 #{@character.name}: Downtime Actions
             h4 #{action.title}
             p
               strong #{"Action Type: "}
-              = @types[action.action_type-1][0]
+              = @action_types[action.action_type-1][0]
             p
               strong #{"Size: "}
               = action.size == 1 ? 'Large' : 'Regular'
