--- a/app/views/downtime_actions/respond.slim
+++ b/app/views/downtime_actions/respond.slim
@@ -1,7 +1,7 @@
 h2 #{@character.name} #{@downtime_action.title}
 p
   strong #{"Action Type: "}
-  = @types[@downtime_action.action_type-1][0]
+  = @action_types[@downtime_action.action_type-1][0]
 p
   strong #{"Size: "}
   = @downtime_action.size == 1 ? 'Large' : 'Regular'
