add experience to dropdown

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,7 @@
             <li class="parent"><%= link_to "Tools", storytellers_path %>
               <ul class="sub-menu">
                 <li><%= link_to "Print Sheets", characters_print_path, rel: 'external', target: '_blank' %></li>
+                <li><%= link_to "Experience", storytellers_experience_path %></li>
                 <li><%= link_to "Downtime Periods", storytellers_downtime_periods_path %></li>
                 <li><%= link_to "Downtime Actions", storytellers_downtime_actions_path %></li>
                 <li><%= link_to "Advantages", storytellers_advantages_path %></li>
