--- a/app/views/characters/print.slim
+++ b/app/views/characters/print.slim
@@ -1,142 +1,5 @@
 .sheet
-  h2 #{@character.name}
-
   - if @character.is_npc
-    h3 Motivation
-
-    .motivation
-      = raw @markdown.render(@character.public_blurb)
-
-  .stats
-    .flex-container.start
-      .column
-        .row
-          strong Name
-          = @character.name
-        .row
-          strong Status
-          = @character.get_status
-        .row
-          strong Character Pronouns
-          = @character.pronouns
-        .row
-          strong Player
-          = @character.user.name
-        .row
-          strong True Self
-          - if @character.true_self
-            = @character.true_self.name
-      .column
-        .row
-          strong Willpower
-          .boxes
-            - @character.willpower.times do
-              i.fa.fa-square-o
-        .row
-          strong Health
-          .boxes
-            - @character.health.times do
-              i.fa.fa-square-o
-        .row
-          strong Initiative
-          = @character.initiative
-        .row
-          strong Defense
-          = @character.defense
-        .row
-          strong Speed
-          = @character.speed
-
-    - if @character.is_npc
-      h3.section Attributes, Skills, and Special Training
-      p
-        strong
-          = "Mental Attributes: "
-        = "Intelligence #{@character.intelligence}, Wits #{@character.wits}, Resolve #{@character.resolve}"
-      p
-        strong
-          = "Physical Attributes: "
-        = "Strength #{@character.strength}, Dexterity #{@character.dexterity}, Stamina #{@character.stamina}"
-      p
-        strong
-          = "Social Attributes: "
-        = "Presence #{@character.presence}, Manipulation #{@character.manipulation}, Composure #{@character.composure}"
-
-      p
-        strong
-          = "Skills: "
-        = @skills_training[:Skills].reject{|st|eval("@character.#{st.parameterize('_')}") == 0}.map{|s| s+" "+eval("@character.#{s.parameterize('_')}").to_s }.join(", ")
-      p
-        strong
-          = "Special Training: "
-        = @skills_training[:"Special Training"].reject{|st|eval("@character.#{st.parameterize('_')}") == 0}.map{|s| s+" "+eval("@character.#{s.parameterize('_')}").to_s }.join(", ")
-    - else
-      h3.attributes Attributes
-
-      .flex-container
-        - @attributes.each do |cat, vals|
-          .column
-            strong
-              = cat
-            - vals.each do |val|
-              .row
-                span.label
-                  = val
-                .dots
-                  - eval("@character.#{val.parameterize("_")}").times do
-                    = icon 'circle'
-
-                  - (5-eval("@character.#{val.parameterize("_")}")).times do
-                    = icon 'circle-o'
-
-      h3.skills-training Skills and Special Training
-
-      .flex-container
-        - @skills_training.each do |cat, vals|
-          .column
-            strong
-              = cat
-            - vals.each do |val|
-              .row
-                span.label
-                  = val
-                .dots
-                  - eval("@character.#{val.parameterize("_")}").times do
-                    = icon 'circle'
-
-                  - (5-eval("@character.#{val.parameterize("_")}")).times do
-                    = icon 'circle-o'
-
-    .flex-container
-      .column
-        h3 Advantages
-
-        ul#advantages
-          - @character.character_has_advantages.group_by{|adv| adv.advantage_id}.each do |k, group|
-            - group.each_with_index do |cha, i|
-              li
-                p.name
-                  = cha.advantage.name
-                  - if cha.advantage.requires_specification?
-                    = " (#{cha.specification})"
-                  - if cha.advantage.allowed_ratings.length > 1
-                    = " #{cha.rating}"
-                - if i == group.length-1
-                  p.desc
-                    = raw @markdown.render(cha.advantage.description)
-      .column
-        h3 Challenges
-
-        ul#advantages
-          - @character.character_has_challenges.each do |chc|
-            li
-              p.name
-                = chc.challenge.name
-              p.desc
-                = raw @markdown.render(chc.challenge.description)
-
-- if @character.is_npc
-  h3 Additional Information
-
-  .additional-info
-    = raw @markdown.render(@character.additional_info)
+    = render partial: 'print_npc_sheet', locals: {character: @character, attributes: @attributes, skills_training: @skills_training, markdown: @markdown}
+  - else
+    = render partial: 'print_sheet', locals: {character: @character, attributes: @attributes, skills_training: @skills_training, markdown: @markdown, questionnaire_sections: @questionnaire_sections, questionnaire: @questionnaire}
