--- a/app/views/characters/index.slim
+++ b/app/views/characters/index.slim
@@ -36,7 +36,7 @@
             - if character.status == 0 or current_user.is_storyteller
               = character.get_status
           td
-            - if character.status == 2
+            - if character.status == 2 and !character.is_npc
               = link_to "Downtime Actions", character_downtime_actions_path(character)
           td
             - unless character.status > 0 and !current_user.is_storyteller
