--- a/app/views/characters/wizard_challenges_advantages.slim
+++ b/app/views/characters/wizard_challenges_advantages.slim
@@ -17,17 +17,18 @@
       = button_tag 'Add', type: 'button', class: 'button-secondary', id: "advantage-add"
 
     ul#advantages-list
-      - @character.character_has_advantages.each do |advantage|
+      - @character.character_has_advantages_attributes.each do |advantage|
         li data-id="#{advantage.id}" data-rating="#{advantage.rating}" data-specification="#{advantage.specification}" data-advantage-id="#{advantage.advantage.id}"
           = "#{advantage.advantage.name} "
           - if advantage.advantage.requires_specification
             = "(<span class='specification'>#{advantage.specification}</span>) ".html_safe
           - if advantage.advantage.allowed_ratings.split(",").length > 1
             = " <span class='rating'>#{advantage.rating}</span>".html_safe
-          = hidden_field_tag "character[character_has_advantages][][id]", advantage.id
-          = hidden_field_tag "character[character_has_advantages][][advantage_id]", advantage.advantage.id
-          = hidden_field_tag "character[character_has_advantages][][rating]", advantage.rating
-          = hidden_field_tag "character[character_has_advantages][][specification]", advantage.specification
+          = hidden_field_tag "character[character_has_advantages_attributes][][id]", advantage.id
+          = hidden_field_tag "character[character_has_advantages_attributes][][advantage_id]", advantage.advantage.id
+          = hidden_field_tag "character[character_has_advantages_attributes][][rating]", advantage.rating
+          = hidden_field_tag "character[character_has_advantages_attributes][][specification]", advantage.specification
+          = hidden_field_tag "character[character_has_advantages_attributes][][_destroy]", false
           = link_to "<i class='fa fa-edit'></i>".html_safe, "#", class: 'advantage-edit'
           = link_to "<i class='fa fa-minus-circle'></i>".html_safe, "#", class: 'advantage-delete'
 
@@ -51,7 +52,7 @@
 
 
     ul#challenges-list
-      - @character.character_has_challenges.each do |challenge|
+      - @character.character_has_challenges_attributes.each do |challenge|
         li
           - if challenge.challenge.is_custom
             - if challenge.custom_name.present?
@@ -69,10 +70,11 @@
           - elsif challenge.challenge.description.present?
             .description
               = raw @markdown.render(challenge.challenge.description)
-          = hidden_field_tag "character[character_has_challenges][][id]", challenge.id
-          = hidden_field_tag "character[character_has_challenges][][challenge_id]", challenge.challenge.id
-          = hidden_field_tag "character[character_has_challenges][][custom_name]", challenge.custom_name
-          = hidden_field_tag "character[character_has_challenges][][custom_description]", challenge.custom_description
+          = hidden_field_tag "character[character_has_challenges_attributes][][id]", challenge.id
+          = hidden_field_tag "character[character_has_challenges_attributes][][challenge_id]", challenge.challenge.id
+          = hidden_field_tag "character[character_has_challenges_attributes][][custom_name]", challenge.custom_name
+          = hidden_field_tag "character[character_has_challenges_attributes][][custom_description]", challenge.custom_description
+          = hidden_field_tag "character[character_has_challenges_attributes][][_destroy]", false
 
     p.instructions Characters can have zero, one, or two #{link_to("Challenges", "http://askagainlater.com/rules/challenges/", rel: "external", target: "_blank")} at character creation. Additionally, you do not select from a list of prewritten Challenges. Instead, you will submit a description of the Challenge in no more than 4 sentences and the Storytellers will build a personalized Challenge for the character in cooperation with you (mechanics and all).
     p.instructions Note that Challenges should be tailored to fit your character’s personal situation, that is, they should represent some aspect of your character not covered by other mechanics. The one exception to this are the Creature Challenges, which have prewritten mechanics. Please see the Challenges page for more information.
