--- a/app/views/characters/wizard_questionnaire.slim
+++ b/app/views/characters/wizard_questionnaire.slim
@@ -36,7 +36,7 @@
             .question
               .question-text
                 = question.question
-              - if @questionnaire_answers_attributes.where(questionnaire_item_id: question.id).length > 0
+              - if @questionnaire_answers.where(questionnaire_item_id: question.id).length > 0
                 - current_question = @questionnaire_answers_attributes.where(questionnaire_item_id: question.id).first
                 = text_area_tag "character[questionnaire_answers_attributes][][answer]", current_question.answer
                 = hidden_field_tag "character[questionnaire_answers_attributes][][id]", current_question.id
