--- a/app/views/storytellers/challenges/new.slim
+++ b/app/views/storytellers/challenges/new.slim
@@ -1,4 +1,7 @@
 .data-entry-form
+  .breadcrumbs
+    = render_breadcrumbs
+    
   h2 New Challenge
 
   = form_for @challenge, url: {action: 'create'} do |f|
