--- a/app/views/storytellers/dashboard/index.slim
+++ b/app/views/storytellers/dashboard/index.slim
@@ -18,4 +18,6 @@ ul
   li
     = link_to "Questionnaire", storytellers_questionnaire_sections_path
   li
+    = link_to "Rituals", storytellers_rituals_path
+  li
     = link_to "Settings", storytellers_settings_path
