--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -63,6 +63,12 @@ select {
   height: 44px;
 }
 
+select[multiple="multiple"] {
+  display: block;
+  max-width: 300px;
+  height: 150px;
+}
+
 .form-row {
   margin: 20px 0;
 
