--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,6 +23,8 @@
                 <li><%= link_to "Challenges", storytellers_challenges_path %></li>
                 <li><%= link_to "True Selves", storytellers_true_selves_path %></li>
                 <li><%= link_to "Questionnaire", storytellers_questionnaire_sections_path %></li>
+                <li><%= link_to "Rituals", storytellers_rituals_path %></li>
+                <li><%= link_to "Settings", storytellers_settings_path %></li>
               </ul>
             </li>
           <% end %>
