--- a/app/views/characters/wizard.slim
+++ b/app/views/characters/wizard.slim
@@ -9,20 +9,22 @@
     = f.label :name
     = f.text_field :name
 
-  .form-row.build-method
-    label.radio-label.checked
-      p
-        strong Mechanical Proposal
-      = f.radio_button :use_extended, false
+  - if Setting.qualitative_open
+    .form-row.build-method
+      label.radio-label.checked
+        p
+          strong Mechanical Proposal
+        = f.radio_button :use_extended, false
 
-      p I would like to build my character's mechanics myself.
-    label.radio-label
-      p
-        strong Written Proposal
-      = f.radio_button :use_extended, true
+        p I would like to build my character's mechanics myself.
+      label.radio-label
+        p
+          strong Written Proposal
+        = f.radio_button :use_extended, true
 
-      p I would like storyteller assistance in building my character, and am willing to answer a few extra questions about it.
-
+        p I would like storyteller assistance in building my character, and am willing to answer a few extra questions about it.
+  - else
+    = f.hidden_field :use_extended, {value: false}
 
   - if @section.present?
 
