--- a/app/views/characters/wizard_challenges_advantages.slim
+++ b/app/views/characters/wizard_challenges_advantages.slim
@@ -17,7 +17,7 @@
       = button_tag 'Add', type: 'button', class: 'button-secondary', id: "advantage-add"
 
     ul#advantages-list
-      - @character.character_has_advantages_attributes.each do |advantage|
+      - @character.character_has_advantages.each do |advantage|
         li data-id="#{advantage.id}" data-rating="#{advantage.rating}" data-specification="#{advantage.specification}" data-advantage-id="#{advantage.advantage.id}"
           = "#{advantage.advantage.name} "
           - if advantage.advantage.requires_specification
@@ -52,7 +52,7 @@
 
 
     ul#challenges-list
-      - @character.character_has_challenges_attributes.each do |challenge|
+      - @character.character_has_challenges.each do |challenge|
         li
           - if challenge.challenge.is_custom
             - if challenge.custom_name.present?
@@ -83,12 +83,14 @@
     = hidden_field_tag "wizard_prev", "skills_trainings"
     = hidden_field_tag "wizard", "full"
     = f.hidden_field :id
+    = f.hidden_field :status
 
     .button-row
       = hidden_field_tag "formaction", "", id: 'form-action'
       = f.submit "Back", id: 'back'
       = f.submit "Save", id: 'save'
-      = f.submit "Finish", id: 'finish'
+      - if @character.status == 0 and Setting.quantitative_open
+        = f.submit "Finish", id: 'save-submit'
 
   .overlay#advantages-overlay
     .modal
