add a bunch of join tables

--- a/app/views/characters/show.slim
+++ b/app/views/characters/show.slim
@@ -10,7 +10,7 @@
     - if @character.rituals.present?
       li
         = link_to "Rituals", "#rituals"
-    - if @character.equipment.present?
+    - if @character.equipments.present?
       li
         = link_to "Equipment", "#equipment"
     li
