--- a/app/assets/stylesheets/pages/_character.scss
+++ b/app/assets/stylesheets/pages/_character.scss
@@ -1,4 +1,37 @@
 .character {
+  ul.tabs {
+    display: flex;
+    align-items: flex-end;
+    border-bottom: 1px $green solid;
+    li {
+      a {
+        padding: 5px 10px;
+        background-color: $green;
+        color: $white;
+        font-weight: bold;
+        text-decoration: none;
+        border-radius: 5px 5px 0 0;
+        margin-right: 5px;
+        display: block;
+        border-width: 2px 2px 0 2px;
+        border-style: solid;
+        border-color: $green;
+        transition: .5s;
+
+        &.current, &:hover {
+          background-color: $white;
+          color: $green;
+        }
+      }
+    }
+  }
+  section {
+    display: none;
+
+    &.show {
+      display: block;
+    }
+  }
   h3.section {
     border-bottom: 3px solid $green;
     display: inline-block;
