flesh out the views, fix equipment migration, add more routes for qualities and types

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,6 +24,7 @@
                 <li><%= link_to "True Selves", storytellers_true_selves_path %></li>
                 <li><%= link_to "Questionnaire", storytellers_questionnaire_sections_path %></li>
                 <li><%= link_to "Rituals", storytellers_rituals_path %></li>
+                <li><%= link_to "Equipment", storytellers_equipment_index_path %></li>
                 <li><%= link_to "Settings", storytellers_settings_path %></li>
               </ul>
             </li>
