Flesh out equipment quality views, fix column name

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,6 +25,8 @@
                 <li><%= link_to "Questionnaire", storytellers_questionnaire_sections_path %></li>
                 <li><%= link_to "Rituals", storytellers_rituals_path %></li>
                 <li><%= link_to "Equipment", storytellers_equipment_index_path %></li>
+                <li><%= link_to "Equipment Types", storytellers_equipment_types_path %></li>
+                <li><%= link_to "Equipment Qualities", storytellers_equipment_qualities_path %></li>
                 <li><%= link_to "Settings", storytellers_settings_path %></li>
               </ul>
             </li>
