--- a/app/views/storytellers/equipment/index.slim
+++ b/app/views/storytellers/equipment/index.slim
@@ -18,7 +18,7 @@
         - @equipment.each do |equipment|
           tr
             td #{link_to equipment.name, storytellers_equipment_path(equipment)}
-            td #{equipment.type.name}
+            td #{equipment.equipment_type.name}
             td #{link_to "Edit", edit_storytellers_equipment_path(equipment)}
             td
               = form_for(storytellers_equipment_path(equipment), method: 'DELETE')
