--- a/app/assets/stylesheets/pages/_character.scss
+++ b/app/assets/stylesheets/pages/_character.scss
@@ -32,6 +32,42 @@
       display: block;
     }
   }
+
+  .card {
+    max-width: 50em;
+    border-bottom: 1px $silver solid;
+    padding: 25px 0;
+
+    .boxes {
+      display: flex;
+
+      .box {
+        text-align: center;
+        margin-right: 5px;
+
+        span {
+          font-size: 12px;
+          display: block;
+          line-height: 1;
+        }
+      }
+    }
+
+    dl {
+      display: flex;
+      flex-wrap: wrap;
+      dt {
+        width: 6em;
+        font-weight: bold;
+      }
+
+      dd {
+        width: 40em;
+        margin-left: 2em;
+      }
+    }
+  }
+
   h3.section {
     border-bottom: 3px solid $green;
     display: inline-block;
